[gd_scene load_steps=10 format=2]

[ext_resource path="res://logo600w.png" type="Texture" id=1]
[ext_resource path="res://buttons/PongButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://buttons/SpaceShooterButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://buttons/TagButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://buttons/RacingButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://buttons/SpamRaceButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://blue-square-texture-background.png" type="Texture" id=7]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=8]
[ext_resource path="res://Buttons.gd" type="Script" id=9]

[node name="Node2D" type="Node2D"]

[node name="TitleScreen" type="Control" parent="."]
margin_left = -76.9514
margin_top = -129.714
margin_right = 1189.05
margin_bottom = 685.286
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="TitleScreen"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 750.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="TitleScreen/Menu"]
margin_right = 1040.0
margin_bottom = 240.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Center Row" type="HBoxContainer" parent="TitleScreen/Menu"]
margin_top = 244.0
margin_right = 1040.0
margin_bottom = 670.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="TitleScreen/Menu/Center Row"]
margin_right = 421.0
margin_bottom = 426.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
script = ExtResource( 9 )

[node name="PongButton" parent="TitleScreen/Menu/Center Row/Buttons" instance=ExtResource( 2 )]
margin_top = 23.0
margin_right = 421.0
margin_bottom = 83.0
rect_min_size = Vector2( 360, 60 )

[node name="RacingButton" parent="TitleScreen/Menu/Center Row/Buttons" instance=ExtResource( 5 )]
margin_top = 103.0
margin_right = 421.0
margin_bottom = 163.0
rect_min_size = Vector2( 360, 60 )

[node name="SpamRaceButton" parent="TitleScreen/Menu/Center Row/Buttons" instance=ExtResource( 6 )]
margin_top = 183.0
margin_right = 421.0
margin_bottom = 243.0
rect_min_size = Vector2( 360, 60 )

[node name="SpaceShooterButton" parent="TitleScreen/Menu/Center Row/Buttons" instance=ExtResource( 3 )]
margin_top = 263.0
margin_right = 421.0
margin_bottom = 323.0

[node name="TagButton" parent="TitleScreen/Menu/Center Row/Buttons" instance=ExtResource( 4 )]
margin_top = 343.0
margin_right = 421.0
margin_bottom = 403.0

[node name="CenterContainer" type="CenterContainer" parent="TitleScreen/Menu/Center Row"]
margin_left = 425.0
margin_right = 1040.0
margin_bottom = 426.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Characters" type="TextureRect" parent="TitleScreen/Menu/Center Row/CenterContainer"]
margin_top = 16.0
margin_right = 615.0
margin_bottom = 410.0
texture = ExtResource( 7 )

[node name="FadeIn" parent="." instance=ExtResource( 8 )]
visible = false
[connection signal="pressed" from="TitleScreen/Menu/Center Row/Buttons/PongButton" to="TitleScreen/Menu/Center Row/Buttons" method="_on_PongButton_pressed"]
[connection signal="pressed" from="TitleScreen/Menu/Center Row/Buttons/RacingButton" to="TitleScreen/Menu/Center Row/Buttons" method="_on_RacingButton_pressed"]
[connection signal="pressed" from="TitleScreen/Menu/Center Row/Buttons/SpamRaceButton" to="TitleScreen/Menu/Center Row/Buttons" method="_on_SpamRaceButton_pressed"]
[connection signal="pressed" from="TitleScreen/Menu/Center Row/Buttons/SpaceShooterButton" to="TitleScreen/Menu/Center Row/Buttons" method="_on_SpaceShooterButton_pressed"]
[connection signal="pressed" from="TitleScreen/Menu/Center Row/Buttons/TagButton" to="TitleScreen/Menu/Center Row/Buttons" method="_on_TagButton_pressed"]
